syntax = "proto3";

package narwhal.auth.v1;

import "common/v1/common.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/narwhalmedia/narwhal/api/proto/auth/v1;authpb";

// AuthService handles authentication and authorization
service AuthService {
  // Authentication
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // User management
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUser(GetUserRequest) returns (User);
  rpc GetCurrentUser(google.protobuf.Empty) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);

  // Authorization
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse);
  rpc GetUserPermissions(GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
}

// User represents a user account
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  narwhal.common.v1.UserRole role = 4;
  bool active = 5;
  UserPreferences preferences = 6;
  google.protobuf.Timestamp created = 7;
  google.protobuf.Timestamp updated = 8;
  google.protobuf.Timestamp last_login = 9;
}

// UserPreferences contains user preferences
message UserPreferences {
  string language = 1;
  string theme = 2;
  string default_quality = 3;
  string subtitle_language = 4;
  bool auto_play = 5;
  bool skip_intro = 6;
}

// Permission represents a permission
message Permission {
  string resource = 1;
  string action = 2;
  string scope = 3;
}

// Authentication requests/responses

message LoginRequest {
  string username = 1;
  string password = 2;
  string device_id = 3;
  string device_name = 4;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  string token_type = 4;
  User user = 5;
}

message LogoutRequest {
  string refresh_token = 1;
  bool all_devices = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  string token_type = 4;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string username = 3;
  narwhal.common.v1.UserRole role = 4;
  repeated string scopes = 5;
  google.protobuf.Timestamp expires_at = 6;
}

// User management requests/responses

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  narwhal.common.v1.UserRole role = 4;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  User user = 2;
  google.protobuf.FieldMask update_mask = 3;
}

message DeleteUserRequest {
  string id = 1;
}

message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

// Authorization requests/responses

message CheckPermissionRequest {
  string user_id = 1;
  string resource = 2;
  string action = 3;
}

message CheckPermissionResponse {
  bool allowed = 1;
  string reason = 2;
}

message GetUserPermissionsRequest {
  string user_id = 1;
}

message GetUserPermissionsResponse {
  repeated Permission permissions = 1;
}
